--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	html {
+		@apply font-sans;
+	}
+
+	body {
+		min-height: 100vh;
+		width: 100%;
+		background-image: url('./assets/home/background-home-mobile.jpg');
+		background-size: cover;
+		background-repeat: no-repeat;
+		color: #fff;
+		overflow-x: hidden;
+	}
+}
+
+@layer components {
+	.wrapper {
+		max-width: calc(100vw - 3em);
+		margin: 0 auto;
+		width: 100%;
+	}
+
+	@screen sm {
+		.wrapper {
+			max-width: calc(100vw - 5em);
+		}
+	}
+
+	@screen md {
+		.wrapper {
+			max-width: calc(100vw - 7em);
+		}
+	}
+
+	@screen lg {
+		.wrapper {
+			max-width: calc(100vw - 10em);
+		}
+	}
+
+	@screen 2xl {
+		.wrapper {
+			max-width: 1400px;
+		}
+	}
+}
