--- a/src/index.css
+++ b/src/index.css
@@ -29,25 +29,25 @@
 
 	@screen sm {
 		.wrapper {
-			max-width: calc(100vw - 5em);
+			max-width: calc(100vw - 6em);
 		}
 	}
 
 	@screen md {
 		.wrapper {
-			max-width: calc(100vw - 7em);
+			max-width: calc(100vw - 10em);
 		}
 	}
 
 	@screen xl {
 		.wrapper {
-			max-width: calc(100vw - 10em);
+			max-width: calc(100vw - 16eem);
 		}
 	}
 
 	@screen 2xl {
 		.wrapper {
-			max-width: 1400px;
+			max-width: 1300px;
 		}
 	}
 
