--- a/src/index.css
+++ b/src/index.css
@@ -22,26 +22,26 @@
 
 @layer components {
 	.wrapper {
-		max-width: calc(100vw - 3em);
+		max-width: calc(100vw - 3rem);
 		margin: 0 auto;
 		width: 100%;
 	}
 
 	@screen sm {
 		.wrapper {
-			max-width: calc(100vw - 6em);
+			max-width: calc(100vw - 6rem);
 		}
 	}
 
 	@screen md {
 		.wrapper {
-			max-width: calc(100vw - 10em);
+			max-width: calc(100vw - 10rem);
 		}
 	}
 
 	@screen xl {
 		.wrapper {
-			max-width: calc(100vw - 16eem);
+			max-width: calc(100vw - 16rem);
 		}
 	}
 
